<resources>
    <string name="app_name">AutoFix</string>
    <string name="btnCustomer">Customer</string>
    <string name="btnServProvider">Service Provider</string>
    <string name="txtLogin">Login</string>
    <string name="hintUser">Username</string>
    <string name="hintPass">Password</string>
    <string name="btnLogin">Login</string>
    <string name="btnRegister">Register</string>
    <string name="txtForgot">Forgot your password?</string>
    <string name="btnAppointment">Appointment details</string>
    <string name="btnSave">Save</string>
    <string name="btnEdit">Edit</string>
    <string name="hint1">Username</string>
    <string name="hint2">Full Name</string>
    <string name="hint3">Cellphone</string>
    <string name="hint4">Address</string>
    <string name="hint5">E-mail</string>
    <string name="txtServProv">Search for a Service Provider</string>
    <string name="hintCity">Enter the city</string>
    <string name="btnGo">Go</string>
    <string name="btnSelect">Select</string>
    <string name="btnNext">Next</string>
    <string name="rdbDrop">Drop-off</string>
    <string name="rdbPick">Pick-up</string>
    <string name="txtSelect">Select the date:</string>
    <string name="txtTime">Select the time</string>
    <string name="btnBook">Book your Appointment</string>
    <string name="btnUserGo">Go</string>
    <string name="hintUsername">Enter the name</string>
    <string name="btnView">View</string>
    <string name="hint6">Username</string>
    <string name="hint7">Full Name</string>
    <string name="hint8">Cellphone Number</string>
    <string name="hint9">Address</string>
    <string name="hint10">E-mail</string>
    <string name="txtService">Service</string>
    <string name="txtDescription">Service Description</string>
    <string name="txtPrice">Price</string>
    <string name="hintAppNumber">Appointment Number</string>
    <string name="txtServiceProv">Service Provider</string>
    <string name="txtCity">City</string>
    <string name="txtServiceExec">Service Executed</string>
    <string name="txtDate">Date</string>
    <string name="txtTime1">Time</string>
    <string name="txtCustomer">Customer</string>
    <string name="txtPhone">Phone</string>
    <string name="txtEmail">E-mail</string>
    <string name="ServProvName">Enter the service provider name</string>
    <string name="ServPhoneNumb">Enter the phone number</string>
    <string name="ProvCity">Enter the city</string>
    <string name="btnCreateUser">Create an initial User</string>
    <string name="hintSearch">Search for a city...</string>
    <string name="txtApp">AutoFix</string>
    <string name="imgDesc">A logo image</string>
    <string name="hintService">Enter service title</string>
    <string name="hintDescription">Enter the service description</string>
    <string name="hintPrice">000.00</string>
    <string name="hintSearchUser">Enter a username ...</string>
    <string-array name="hours">
        <item>Select a time</item>
        <item>09:00-10:00</item>
        <item>10:00-11:00</item>
        <item>11:00-12:00</item>
        <item>12:00-13:00</item>
        <item>13:00-14:00</item>
        <item>14:00-15:00</item>
        <item>15:00-16:00</item>
        <item>16:00-17:00</item>
        <item>17:00-18:00</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btnService">Service Details</string>
</resources>