<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/indiv_user"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IndividualUser">

    <EditText
        android:id="@+id/editUserN"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="74dp"
        android:layout_marginBottom="17dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/hint6"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnUserSave"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:background="@drawable/button_bg"
        android:text="@string/btnSave"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editEmail" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="35dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/hint10"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/btnUserSave"
        app:layout_constraintStart_toStartOf="@+id/editUserAdd"
        app:layout_constraintTop_toBottomOf="@+id/editUserAdd" />

    <EditText
        android:id="@+id/editUserAdd"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="23dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/hint9"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editEmail"
        app:layout_constraintStart_toStartOf="@+id/editCellNumb"
        app:layout_constraintTop_toBottomOf="@+id/editCellNumb" />

    <EditText
        android:id="@+id/editCellNumb"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="19dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/hint8"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editUserAdd"
        app:layout_constraintStart_toStartOf="@+id/editFullN"
        app:layout_constraintTop_toBottomOf="@+id/editFullN" />

    <EditText
        android:id="@+id/editFullN"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="18dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/hint7"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editCellNumb"
        app:layout_constraintStart_toStartOf="@+id/editPassword"
        app:layout_constraintTop_toBottomOf="@+id/editPassword" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="19dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/hintPass"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/editFullN"
        app:layout_constraintStart_toStartOf="@+id/editUserN"
        app:layout_constraintTop_toBottomOf="@+id/editUserN" />
</androidx.constraintlayout.widget.ConstraintLayout>