<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CustomerProfile">

    <EditText
        android:id="@+id/editUsername"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="57dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="57dp"
        android:layout_marginBottom="27dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/hint1"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editFullName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editFullName"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="57dp"
        android:layout_marginEnd="57dp"
        android:layout_marginBottom="14dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/hint2"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editCellphone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editUsername" />

    <EditText
        android:id="@+id/editAddress"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/hint4"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editEmail1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editCellphone" />

    <EditText
        android:id="@+id/editEmail1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="59dp"
        android:layout_marginEnd="59dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/hint5"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/btnEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editAddress" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginBottom="55dp"
        android:background="@drawable/button_bg"
        android:text="@string/btnSave"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEdit" />

    <Button
        android:id="@+id/btnEdit"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/button_bg"
        android:text="@string/btnEdit"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/btnSave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editEmail1" />

    <EditText
        android:id="@+id/editCellphone"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="57dp"
        android:layout_marginEnd="57dp"
        android:layout_marginBottom="18dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/hint3"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editFullName" />

</androidx.constraintlayout.widget.ConstraintLayout>