<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterServProvider">

    <EditText
        android:id="@+id/editServProvName"
        android:layout_width="277dp"
        android:layout_height="0dp"
        android:layout_marginTop="74dp"
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="25dp"
        android:ems="10"
        android:hint="@string/ServProvName"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editPhoneNumb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editProvCity"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="3dp"
        android:layout_marginBottom="33dp"
        android:ems="10"
        android:hint="@string/ProvCity"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/btnProvSave"
        app:layout_constraintStart_toStartOf="@+id/editPhoneNumb"
        app:layout_constraintTop_toBottomOf="@+id/editPhoneNumb" />

    <Button
        android:id="@+id/btnProvSave"
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:layout_marginBottom="45dp"
        android:background="@drawable/button_bg"
        android:text="@string/btnSave"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btnCreateUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editProvCity" />

    <Button
        android:id="@+id/btnCreateUser"
        android:layout_width="224dp"
        android:layout_height="0dp"
        android:layout_marginBottom="143dp"
        android:background="@drawable/button_bg"
        android:text="@string/btnCreateUser"
        android:textColor="@color/white"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnProvSave" />

    <EditText
        android:id="@+id/editPhoneNumb"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="30dp"
        android:ems="10"
        android:hint="@string/ServPhoneNumb"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/editProvCity"
        app:layout_constraintStart_toStartOf="@+id/editServProvName"
        app:layout_constraintTop_toBottomOf="@+id/editServProvName" />
</androidx.constraintlayout.widget.ConstraintLayout>