<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/txt"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ServiceReport">

    <EditText
        android:id="@+id/editAppNumber"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="54dp"
        android:ems="10"
        android:hint="@string/hintAppNumber"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/txtOutServProv"
        app:layout_constraintEnd_toStartOf="@+id/btnReportGo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnReportGo"
        android:layout_width="122dp"
        android:layout_height="48dp"
        android:layout_marginEnd="46dp"
        android:background="@drawable/button_bg"
        android:text="@string/btnGo"
        android:textColor="@color/white"
        app:layout_constraintBaseline_toBaselineOf="@+id/editAppNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editAppNumber" />

    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="36dp"
        android:text="@string/txtEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPhone" />

    <TextView
        android:id="@+id/txtServiceProv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="168dp"
        android:text="@string/txtServiceProv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:text="@string/txtCity"
        app:layout_constraintStart_toStartOf="@+id/txtServiceProv"
        app:layout_constraintTop_toBottomOf="@+id/txtServiceProv" />

    <TextView
        android:id="@+id/txtServiceExec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:text="@string/txtServiceExec"
        app:layout_constraintStart_toStartOf="@+id/txtDate"
        app:layout_constraintTop_toBottomOf="@+id/txtCity" />

    <TextView
        android:id="@+id/txtDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="24dp"
        android:text="@string/txtDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtServiceExec" />

    <TextView
        android:id="@+id/txtTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="12dp"
        android:text="@string/txtTime1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDate" />

    <TextView
        android:id="@+id/txtCustomer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txtCustomer"
        app:layout_constraintEnd_toEndOf="@+id/txtTime"
        app:layout_constraintHorizontal_bias="0.459"
        app:layout_constraintStart_toEndOf="@+id/txtTime"
        app:layout_constraintTop_toBottomOf="@+id/txtTime" />

    <TextView
        android:id="@+id/txtPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:text="@string/txtPhone"
        app:layout_constraintStart_toStartOf="@+id/txtCustomer"
        app:layout_constraintTop_toBottomOf="@+id/txtCustomer" />

    <TextView
        android:id="@+id/txtOutPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="64dp"
        app:layout_constraintBottom_toTopOf="@+id/txtOutEmail"
        app:layout_constraintStart_toEndOf="@+id/txtCustomer" />

    <TextView
        android:id="@+id/txtOutCustomer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toStartOf="@+id/txtOutPhone"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/txtOutPhone"
        app:layout_constraintTop_toBottomOf="@+id/txtOutTime" />

    <TextView
        android:id="@+id/txtOutTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toStartOf="@+id/txtOutCustomer"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/txtOutCustomer"
        app:layout_constraintTop_toBottomOf="@+id/txtOutDate" />

    <TextView
        android:id="@+id/txtOutDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@+id/txtOutTime"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/txtOutTime"
        app:layout_constraintTop_toBottomOf="@+id/txtOutServExec" />

    <TextView
        android:id="@+id/txtOutServExec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toStartOf="@+id/txtOutDate"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/txtOutDate"
        app:layout_constraintTop_toBottomOf="@+id/txtOutCity" />

    <TextView
        android:id="@+id/txtOutCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toStartOf="@+id/txtOutServExec"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/txtOutServExec"
        app:layout_constraintTop_toBottomOf="@+id/txtOutServProv" />

    <TextView
        android:id="@+id/txtOutServProv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        app:layout_constraintBottom_toBottomOf="@+id/txtServiceProv"
        app:layout_constraintEnd_toStartOf="@+id/txtOutCity"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/txtOutCity" />

    <TextView
        android:id="@+id/txtOutEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toStartOf="@+id/txtOutPhone"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/txtOutPhone"
        app:layout_constraintTop_toBottomOf="@+id/txtOutCustomer" />

</androidx.constraintlayout.widget.ConstraintLayout>