<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ServiceProviders">

    <TextView
        android:id="@+id/txtServProv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/prompt"
        android:text="@string/txtServProv"
        android:textColor="#0B2171"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/btnGo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnGo"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/button_bg"
        android:text="@string/btnGo"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/listView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editCity"
        app:layout_constraintTop_toBottomOf="@+id/txtServProv" />

    <EditText
        android:id="@+id/editCity"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="17dp"
        android:ems="10"
        android:hint="@string/hintCity"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/btnGo"
        app:layout_constraintEnd_toStartOf="@+id/btnGo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnGo" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="28dp"
        app:layout_constraintBottom_toTopOf="@+id/btnSelect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGo" />

    <Button
        android:id="@+id/btnSelect"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="55dp"
        android:background="@drawable/button_bg"
        android:text="@string/btnSelect"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listView" />
</androidx.constraintlayout.widget.ConstraintLayout>