<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BookAppointment">

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/spinnerTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSelect" />

    <Button
        android:id="@+id/btnBook"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="55dp"
        android:background="@drawable/button_bg"
        android:text="@string/btnBook"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/spinnerTime" />

    <TextView
        android:id="@+id/txtSelect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/txtSelect"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/calendarView"
        app:layout_constraintTop_toBottomOf="@+id/switchDrop" />

    <Spinner
        android:id="@+id/spinnerTime"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="115dp"
        android:entries="@array/hours"
        android:gravity="center"
        android:spinnerMode="dialog"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Switch
        android:id="@+id/switchDrop"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:checked="true"
        android:onClick="checkSwitch"
        android:text="@string/rdbDrop"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/switchPick"
        app:layout_constraintStart_toStartOf="@+id/txtSelect"
        app:layout_constraintTop_toTopOf="@+id/switchPick" />

    <Switch
        android:id="@+id/switchPick"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:onClick="checkSwitch"
        android:text="@string/rdbPick"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>